# devsignal

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.example.toml
.github/workflows/: ci.yml  release.yml
crates/devsignal-core/: Cargo.toml
crates/devsignal-core/src/: lib.rs
crates/devsignal-daemon/: Cargo.toml
crates/devsignal-daemon/src/: config_edit.rs  init.rs  main.rs
crates/devsignal-discord/: Cargo.toml
crates/devsignal-discord/src/: lib.rs
crates/devsignal-macos/: Cargo.toml
crates/devsignal-macos/src/: lib.rs
docs/superpowers/plans/: 2026-04-26-rich-presence-upgrade.md
packaging/homebrew/: devsignal.rb
packaging/macos/: com.devsignal.daemon.example.plist  install.sh
scripts/: setup-local-config.sh
