[workspace]
resolver = "2"
members = [
    "crates/devsignal-core",
    "crates/devsignal-discord",
    "crates/devsignal-macos",
    "crates/devsignal-daemon",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
rust-version = "1.74"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.33"
dirs = "6"
discord-rich-presence = "1.1"
objc2 = "0.6"
objc2-app-kit = "0.3"
ctrlc = "3"
serde_json = "1"
