[package]
name = "devsignal-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unified Discord Rich Presence for AI coding CLIs (macOS)"

[[bin]]
name = "devsignal"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
ctrlc.workspace = true
devsignal-core = { path = "../devsignal-core" }
devsignal-discord = { path = "../devsignal-discord" }
devsignal-macos = { path = "../devsignal-macos" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sysinfo.workspace = true
